
--------------
Version 5.3.0
**************
Adding the (Windows) Process Collector

--------------
Version 5.3.1 (2021-3-16)
**************
Change the way the full and quick recent monitor pack lists get launched. To be more consistent.

--------------
Version 5.3.2 (2021-4-6)
**************
Small change in file system collector agent to separate the value and the unit for graphing.

--------------
Version 5.3.3 (2021-4-9)
**************
Fix create new object from Template window to show edit values in list
Fix HTTP Ping template to not add extra http://
Change SSHQuery collector to exclude empty leading and trailing lines/characters

--------------
Version 5.3.4 (2021-6-28)
**************
A few template enhancements
Updated UI - Mostly buttons and checkboxes to be flat.

--------------
Version 5.3.5 (2021-9-9)
**************
Enhancing PerfCounterCollector to handle more multi-Instance scenarios.
Fix bug - editing collector name gets overwritten when refresh of monitor pack happens.
Add Computer name property on Process collector.

--------------
Version 5.3.6 (2021-10-23)
**************
Cosmetic changes - Button styles.
Fix: Config variables in Templates: allow [null] and [any] values.
Add 'reset templates' button on the General settings window.

--------------
Version 5.3.7 (2022-03-09)
**************
Ping collector - display error details in stead of -1 on main UI like Time Out.
Add 'Check sequence' override on monitor pack level. Default is not enabled.

--------------
Version 5.3.8 (2022-03-17)
**************
High DPI bug fix. OK and Cancel button not visible for Collector details/edit window.

--------------
Version 5.3.9 (2022-03-30)
**************
Bugfix - Error when creating new Monitor pack and close the select template window without choosing a template.
Bugfix - When creating new Monitor pack and close the select template window without choosing a template update events of collectors do not fire.